Closed
Bug 311709
Opened 20 years ago
Closed 19 years ago
Main browser window stuck in resize.
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: cole-anstey, Assigned: emaijala+moz)
References
Details
Attachments
(1 file, 2 obsolete files)
|
658 bytes,
patch
|
emaijala+moz
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.12) Gecko/20050915 Firefox/1.0.7
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.12) Gecko/20050915 Firefox/1.0.7
The Main browser window gets stuck in a resize and can cause unusual behaviour.
Reproducible: Always
Steps to Reproduce:
1. To get this to work your mouse has to be over the sizebox in the bottom right
and 'not' the frame edges or frame corners.
2. When you resize the main browser window via the sizebox and then right click,
this stops the resizing of the browser window.
Its best if you are resizing the window quickly ! It appears that some internal
state still thinks its being resized.
3. If you move the mouse back over the sizebox (without any mouse buttons
pressed) the window still resizes. Spuriously the window either resizes to its
minimal extent or sometimes resizes to what appears screen size?
Actual Results:
N/A
Expected Results:
N/A
I had a look and this might potentially be the cause of Bug 295970?
It's easy to recreate this and I can reproduce it evertime.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20051006
Firefox/1.4.1
Seeing this too
Comment 2•20 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b5) Gecko/20051008
Firefox/1.4.1 ID:2005100805
Easy to reproduce
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•20 years ago
|
Component: General → XP Toolkit/Widgets: XUL
Product: Firefox → Core
QA Contact: general → xptoolkit.xul
Version: unspecified → Trunk
Comment 3•20 years ago
|
||
*** Bug 325160 has been marked as a duplicate of this bug. ***
Comment 4•20 years ago
|
||
I have the same bug but I am unable to reproduce it unless I have the TweakUI "activation follows mouse (x-mouse)" option on.
This TweakUI (microsoft powertoys) option allows focus on mouse hover for windows, so the bug maybe caused by a loss of focus while resizing.
I have just tried it and I do not have tweakui installed.
Note you have to be over the sizebox (the ui with the three slashes) and not the frame.
Comment 6•20 years ago
|
||
Have I mentioned that I think we should remove the resizer? ;)
Comment 7•20 years ago
|
||
This is because the resizer is implemented in JS and can't do anything useful like capture the mouse or initiate an OS resize.
| Assignee | ||
Comment 9•19 years ago
|
||
Taking.
Assignee: nobody → emaijala
Component: XP Toolkit/Widgets: XUL → Widget: Win32
| Assignee | ||
Comment 10•19 years ago
|
||
The problem was that right-click ended mouse capture, but left button was still down. This is a patch to make widget layer only release mouse capture if no button is down so that resizer or whatever can continue receiving mouse input until any button depressed inside it is released.
Attachment #245068 -
Flags: superreview?(roc)
Attachment #245068 -
Flags: review?(neil)
Comment 11•19 years ago
|
||
Comment on attachment 245068 [details] [diff] [review]
Patch v1
Unnecessary. Just test wParam.
Attachment #245068 -
Flags: review?(neil) → review-
| Assignee | ||
Comment 12•19 years ago
|
||
Comment on attachment 245068 [details] [diff] [review]
Patch v1
D'oh, of course. A new patch coming up.
Attachment #245068 -
Attachment is obsolete: true
Attachment #245068 -
Flags: superreview?(roc)
| Assignee | ||
Comment 13•19 years ago
|
||
Here's a new very simple patch.
Attachment #245354 -
Flags: superreview?(roc)
Attachment #245354 -
Flags: review?(neil)
Comment 14•19 years ago
|
||
Comment on attachment 245354 [details] [diff] [review]
Patch v2
You can simplify this by a) changing == 0 to ! b) applying De Morgan's Law c) switching from boolean to logical or d) distributing & over | [e) compiler applies constant folding on (MK_LBUTTON | MK_RBUTTON | MK_MBUTTON)]
Attachment #245354 -
Flags: review?(neil) → review+
| Assignee | ||
Comment 15•19 years ago
|
||
Point well taken. I like this form. Ok?
Attachment #245354 -
Attachment is obsolete: true
Attachment #245397 -
Flags: superreview?(roc)
Attachment #245397 -
Flags: review+
Attachment #245354 -
Flags: superreview?(roc)
Comment 16•19 years ago
|
||
Actually I was lazy and when testing I'd just written
CaptureMouse(wParam & (MK_LBUTTON | MK_RBUTTON | MK_MBUTTON));
| Assignee | ||
Comment 17•19 years ago
|
||
Well, that would of course be even more simple, but I want to keep that |if| there to make it clear and obvious.
Attachment #245397 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 18•19 years ago
|
||
Fix checked in to trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•