Patch for bug 311709: Main browser window stuck in resize r=neil sr=roc